--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,12 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Hibernate -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.6.15.Final</version>
+            <version>6.1.7.Final</version>
         </dependency>
+
 
         <!-- MySQL Connector -->
         <dependency>
