--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <version>2.0.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+
         <!-- Logback Classic (реалізація для SLF4J) -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
